@@ -1,3 +1,12 @@
+2009-02-16  Dan Williams  <dcbw@redhat.com>
+
+	* src/gconf-helpers/gconf-upgrade.c
+	  src/gconf-helpers/gconf-upgrade.h
+	  src/gconf-helpers/gconf-helpers.c
+		- (nm_gconf_migrate_0_7_autoconnect_default): update autoconnect
+			GConf entries to preserve behavior now that autoconnect
+			defaults to TRUE in libnm-util
+
 2009-02-16  Alexander Sack  <asac@ubuntu.com>
 
 	* src/applet.c
